--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "run",
     "docker"
   ],
-  "main": "./bin/runner.js",
+  "main": "./index.js",
   "scripts": {
     "start": "node ./bin/runner.js"
   },
