--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "runner",
+  "name": "@tarwich/runner",
   "version": "1.0.0",
   "description": "Allow running of Parcel easier along with things like docker",
   "tags": [
