--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   "author": "Samuel Dillow",
   "license": "MIT",
   "devDependencies": {
+    "@types/cosmiconfig": "^5.0.3",
+    "@types/lodash": "^4.14.123",
+    "@types/node": "11.11.3",
+    "@types/parcel-bundler": "1.10.2",
     "eslint": "5.15.1",
     "eslint-config-tarwich": "github:tarwich/eslint-config-tarwich",
-    "parcel-bundler": "1.11.0"
+    "parcel-bundler": "1.11.0",
+    "typescript": "3.3.3333"
   },
   "eslintConfig": {
     "extends": "eslint-config-tarwich"
