--- a/package.json
+++ b/package.json
@@ -22,19 +22,21 @@
     "@types/lodash": "^4.14.123",
     "@types/node": "11.11.3",
     "@types/parcel-bundler": "1.10.2",
-    "eslint": "5.15.1",
-    "eslint-config-tarwich": "github:tarwich/eslint-config-tarwich",
+    "@types/semver": "^5.5.0",
     "parcel-bundler": "1.11.0",
     "typescript": "3.3.3333"
-  },
-  "eslintConfig": {
-    "extends": "eslint-config-tarwich"
   },
   "dependencies": {
     "commander": "^2.19.0",
     "cosmiconfig": "^5.1.0",
     "dotenv": "^6.2.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "semver": "^5.6.0"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "endOfLine": "lf"
   },
   "runner": {
     "client": {
