--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
   "author": "Samuel Dillow",
   "license": "MIT",
   "devDependencies": {
-    "@types/cosmiconfig": "^5.0.3",
-    "@types/lodash": "^4.14.123",
-    "@types/node": "11.11.3",
-    "@types/parcel-bundler": "1.10.2",
-    "@types/semver": "^5.5.0",
-    "parcel-bundler": "1.11.0",
-    "typescript": "3.3.3333"
+    "@types/cosmiconfig": "5.0.3",
+    "@types/lodash": "4.14.123",
+    "@types/node": "11.13.5",
+    "@types/parcel-bundler": "1.12.0",
+    "@types/semver": "6.0.0",
+    "parcel-bundler": "1.12.3",
+    "typescript": "3.4.3"
   },
   "dependencies": {
     "commander": "^2.19.0",
