--- a/package.json
+++ b/package.json
@@ -17,24 +17,31 @@
   "keywords": [],
   "author": "Samuel Dillow",
   "license": "MIT",
+  "repository": "https://github.com/tarwich/runner",
   "devDependencies": {
+    "@types/chai": "4.1.7",
     "@types/cosmiconfig": "5.0.3",
-    "@types/lodash": "4.14.123",
-    "@types/node": "11.13.5",
+    "@types/lodash": "4.14.126",
+    "@types/mocha": "5.2.6",
+    "@types/node": "12.0.0",
     "@types/parcel-bundler": "1.12.0",
     "@types/semver": "6.0.0",
+    "chai": "4.2.0",
+    "chalk": "2.4.2",
+    "eslint": "5.16.0",
     "eslint-config-tarwich": "github:tarwich/eslint-config-tarwich",
-    "eslint": "5.15.1",
-    "globby": "9.1.0",
+    "globby": "9.2.0",
+    "mocha": "6.1.4",
     "parcel-bundler": "1.12.3",
-    "typescript": "3.4.3"
+    "prettier": "1.17.1",
+    "semver": "6.0.0",
+    "typescript": "3.4.5"
   },
   "dependencies": {
-    "commander": "^2.19.0",
-    "cosmiconfig": "^5.1.0",
-    "dotenv": "^6.2.0",
-    "lodash": "^4.17.11",
-    "semver": "^5.6.0"
+    "commander": "^2.20.0",
+    "cosmiconfig": "^5.2.0",
+    "dotenv": "^8.0.0",
+    "lodash": "^4.17.11"
   },
   "prettier": {
     "singleQuote": true,
@@ -44,6 +51,14 @@
   "runner": {
     "client": {
       "entry": "test/client/index.html"
+    },
+    "lint": {
+      "carets": {
+        "dependencies": "range"
+      },
+      "custom": [
+        "test/additional-lint.js"
+      ]
     }
   }
 }
