--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
     "allowJs": true,
     "baseUrl": ".",
     "checkJs": true,
+    "lib": [
+      "esnext.array",
+      "dom"
+    ],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -11,7 +15,7 @@
     "paths": { "*": ["src/types/*"] },
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "target": "es6"
+    "target": "es2018"
   },
   "exclude": [
     "node_modules",
