--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,7 @@
     "allowJs": true,
     "baseUrl": ".",
     "checkJs": true,
-    "lib": [
-      "esnext.array",
-      "dom"
-    ],
+    "lib": ["esnext.array", "dom"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -17,8 +14,5 @@
     "strictPropertyInitialization": true,
     "target": "es2018"
   },
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "exclude": ["node_modules", "dist"]
 }
