--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "allowJs": true,
     "baseUrl": ".",
     "checkJs": true,
-    "lib": ["esnext.array", "dom"],
+    "lib": ["dom"],
     "module": "commonjs",
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -12,7 +12,7 @@
     "paths": { "*": ["src/types/*"] },
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "target": "es2018"
+    "target": "es6"
   },
   "exclude": ["node_modules", "dist"]
 }
