--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/mocha": "5.2.6",
     "@types/node": "12.0.0",
     "@types/parcel-bundler": "1.12.0",
+    "@types/request-promise-native": "1.0.16",
     "@types/semver": "6.0.0",
     "chai": "4.2.0",
     "chalk": "2.4.2",
@@ -34,6 +35,7 @@
     "mocha": "6.1.4",
     "parcel-bundler": "1.12.3",
     "prettier": "1.17.1",
+    "request-promise-native": "1.0.7",
     "semver": "6.0.0",
     "typescript": "3.4.5"
   },
