--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/chai": "4.1.7",
     "@types/cosmiconfig": "5.0.3",
+    "@types/glob": "7.1.1",
     "@types/lodash": "4.14.126",
     "@types/mocha": "5.2.6",
     "@types/mock-fs": "3.6.30",
