Reverted package json

--- a/package.json
+++ b/package.json
@@ -56,6 +56,12 @@
     "endOfLine": "lf"
   },
   "runner": {
+    "client": {
+      "entry": "test/client/index.html"
+    },
+    "server": {
+      "entry": "test/server/index.js"
+    },
     "lint": {
       "carets": {
         "dependencies": "range"
