--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,14 @@ services:
       - .:/var/app
     working_dir: /var/app
   postgres:
-    image: postgres
+    image: alpine
     ports: ['5432']
+    command: nc -l 5432
+  postgres-test:
+    image: alpine
+    ports: ['5432']
+    command: nc -l 5432
+  rabbit-mq:
+    image: alpine
+    ports: ['5672', '15672']
+    command: nc -l 5672 15672
