--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/parcel-bundler": "1.12.0",
     "@types/request-promise-native": "1.0.16",
     "@types/semver": "6.0.0",
+    "@types/sinon": "^7.0.13",
+    "@types/string-similarity": "^3.0.0",
     "chai": "4.2.0",
     "chalk": "2.4.2",
     "eslint": "5.16.0",
@@ -40,6 +42,7 @@
     "prettier": "1.17.1",
     "request-promise-native": "1.0.7",
     "semver": "6.0.0",
+    "sinon": "7.3.2",
     "typescript": "3.4.5"
   },
   "dependencies": {
@@ -48,7 +51,8 @@
     "dotenv": "^8.0.0",
     "glob": "^7.1.4",
     "linguist-languages": "^7.4.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "string-similarity": "3.0.0"
   },
   "prettier": {
     "singleQuote": true,
