--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "typescript": "3.5.3"
   },
   "dependencies": {
-    "commander": "2.20.0",
-    "cosmiconfig": "5.2.1",
-    "dotenv": "8.0.0",
-    "glob": "7.1.4",
-    "linguist-languages": "7.5.1",
-    "lodash": "4.17.14",
-    "string-similarity": "3.0.0"
+    "commander": "^2.20.0",
+    "cosmiconfig": "^5.2.1",
+    "dotenv": "^8.0.0",
+    "glob": "^7.1.4",
+    "linguist-languages": "^7.5.1",
+    "lodash": "^4.17.14",
+    "string-similarity": "^3.0.0"
   },
   "prettier": {
     "singleQuote": true,
