--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/parcel-bundler": "1.12.0",
     "@types/request-promise-native": "1.0.16",
     "@types/semver": "6.0.1",
+    "@types/shelljs": "0.8.6",
     "@types/string-similarity": "3.0.0",
     "chai": "4.2.0",
     "chalk": "2.4.2",
@@ -41,6 +42,7 @@
     "prettier": "1.18.2",
     "request-promise-native": "1.0.7",
     "semver": "6.2.0",
+    "shelljs": "0.8.3",
     "typescript": "3.6.2"
   },
   "dependencies": {
@@ -64,6 +66,47 @@
     "server": {
       "entry": "test/server/index.js"
     },
+    "sources": [
+      {
+        "name": "first1",
+        "entry": "test/first1/index.html",
+        "parcel": {
+          "outDir": "dist/first1",
+          "hmr": false
+        }
+      },
+      {
+        "name": "first2",
+        "entry": "test/first2/index.html",
+        "parcel": {
+          "outDir": "dist/first2",
+          "hmr": false
+        }
+      },
+      {
+        "name": "second",
+        "dependencies": [
+          "first1",
+          "first2"
+        ],
+        "entry": "test/second/index.html",
+        "parcel": {
+          "outDir": "dist/second",
+          "hmr": false
+        }
+      },
+      {
+        "name": "third",
+        "dependencies": [
+          "second"
+        ],
+        "entry": "test/third/index.html",
+        "parcel": {
+          "outDir": "dist/third",
+          "hmr": false
+        }
+      }
+    ],
     "lint": {
       "carets": {
         "dependencies": "range"
