--- a/package.json
+++ b/package.json
@@ -32,17 +32,19 @@
     "@types/semver": "6.0.1",
     "@types/shelljs": "0.8.6",
     "@types/string-similarity": "3.0.0",
+    "@types/touch": "3.1.1",
     "chai": "4.2.0",
     "chalk": "2.4.2",
     "eslint": "6.0.1",
     "eslint-config-tarwich": "github:tarwich/eslint-config-tarwich",
     "mocha": "6.1.4",
     "mock-fs": "4.10.1",
+    "npm-touch": "1.0.4",
     "parcel-bundler": "1.12.3",
     "prettier": "1.18.2",
     "request-promise-native": "1.0.7",
     "semver": "6.2.0",
-    "shelljs": "0.8.3",
+    "touch": "3.1.0",
     "typescript": "3.6.2"
   },
   "dependencies": {
