--- a/package.json
+++ b/package.json
@@ -12,6 +12,27 @@
     "start": "node ./bin/runner.js",
     "test": "mocha test/*.test.js"
   },
+  "dependencies": {
+    "@tanstack/react-query": "^4.0.10",
+    "@types/express": "^4.17.13",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.25",
+    "ansi-to-react": "^6.1.6",
+    "bidi-rpc": "git+https://github.com/tarwich/bidi-rpc.git",
+    "cosmiconfig": "^7.0.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "immer": "^9.0.15",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "styled": "^1.0.0",
+    "styled-components": "^5.3.5",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.3",
+    "ws": "^8.8.1",
+    "zustand": "^4.0.0-rc.4"
+  },
   "bin": {
     "runner": "./bin/runner.js"
   },
@@ -19,66 +40,9 @@
   "author": "Samuel Dillow",
   "license": "MIT",
   "repository": "https://github.com/tarwich/runner",
-  "devDependencies": {
-    "@types/chai": "4.1.7",
-    "@types/cosmiconfig": "5.0.3",
-    "@types/glob": "7.1.1",
-    "@types/lodash": "4.14.136",
-    "@types/mocha": "5.2.7",
-    "@types/mock-fs": "3.6.30",
-    "@types/node": "12.6.3",
-    "@types/parcel-bundler": "1.12.0",
-    "@types/request-promise-native": "1.0.16",
-    "@types/semver": "6.0.1",
-    "@types/string-similarity": "3.0.0",
-    "chai": "4.2.0",
-    "chalk": "2.4.2",
-    "eslint": "6.0.1",
-    "eslint-config-tarwich": "github:tarwich/eslint-config-tarwich",
-    "mocha": "6.1.4",
-    "mock-fs": "4.10.1",
-    "parcel-bundler": "1.12.3",
-    "prettier": "1.18.2",
-    "request-promise-native": "1.0.7",
-    "semver": "6.2.0",
-    "typescript": "3.6.2"
-  },
-  "dependencies": {
-    "commander": "^2.20.0",
-    "cosmiconfig": "^5.2.1",
-    "dotenv": "^8.0.0",
-    "glob": "^7.1.4",
-    "linguist-languages": "^7.5.1",
-    "lodash": "^4.17.14",
-    "string-similarity": "^3.0.0"
-  },
   "prettier": {
     "singleQuote": true,
     "trailingComma": "es5",
     "endOfLine": "lf"
-  },
-  "runner": {
-    "client": {
-      "entry": "test/client/index.html"
-    },
-    "server": {
-      "entry": "test/server/index.js"
-    },
-    "lint": {
-      "carets": {
-        "dependencies": "range"
-      },
-      "custom": {
-        "custom": "test/additional-lint.js"
-      },
-      "prettier": {
-        "paths": [
-          "$EXTENSIONS",
-          "bin/{,**/}$EXTENSIONS",
-          "src/{,**/}$EXTENSIONS",
-          "test/{,**/}$EXTENSIONS"
-        ]
-      }
-    }
   }
 }
