--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.25",
+    "@vitejs/plugin-react": "^2.0.0",
     "ansi-to-react": "^6.1.6",
+    "babel-plugin-styled-components": "^2.0.7",
     "bidi-rpc": "git+https://github.com/tarwich/bidi-rpc.git",
     "cosmiconfig": "^7.0.1",
     "dotenv": "^16.0.1",
@@ -44,5 +46,8 @@
     "singleQuote": true,
     "trailingComma": "es5",
     "endOfLine": "lf"
+  },
+  "devDependencies": {
+    "@types/ws": "^8.5.3"
   }
 }
